# Broadcast-Socket-Programming

./: README.txt
Client/Client/: CMakeLists.txt  Client.cbp  Client.depend  Client.layout  a.out  client  main.cpp
Client/Client/CMakeBuild/: CMakeCache.txt  Makefile  cmake_client  cmake_install.cmake
Client/Client/include/: Client.h
Client/Client/src/: Client.cpp
S/: CMakeLists.txt  S.cbp  S.depend  S.layout  main.cpp
S/CMakeBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_server
S/include/: Server.h
S/src/: Server.cpp
